--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ testresults
 *.pid
 *.swp
 *#*
-npm-debug.log
+npm-debug.log*
 foo.js
 hello.js
 plugins/c9.docker/containers/ci/files/github_c9_newclient
